fix: charts - on small size - removing border and changing height

--- a/src/components/ChartsPage/ChartsPage.module.css
+++ b/src/components/ChartsPage/ChartsPage.module.css
@@ -16,6 +16,11 @@
     height: 250px;
     width: 250px;
   }
+
+  .borderRight,
+  .borderBottom {
+    border: none
+  }
 }
 
 @media screen and (min-width: 0px) and (max-width: 640px) {
